--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
+    <color name="black">#1C1E28</color>
+    <color name="gray">#707175</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purple500">#9d50bb</color>
     <color name="purple700">#6e48aa</color>
