make recyclerView for select days

--- a/app/src/main/res/layout/item_rc_task.xml
+++ b/app/src/main/res/layout/item_rc_task.xml
@@ -67,7 +67,7 @@
                 android:id="@+id/icon_menu"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:src="@drawable/ic_pen"
+                android:src="@drawable/ic_menu"
                 app:tint="@color/gray"
                 android:scaleType="centerInside"
                 android:layout_alignParentEnd="true"
