--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,8 @@
     <color name="purple500">#9d50bb</color>
     <color name="purple700">#6e48aa</color>
     <color name="purple200">#EFC5FF</color>
+    <color name="green">#16F43C</color>
+    <color name="red">#F21A70</color>
+    <color name="yellow">#FFD817</color>
+    <color name="blue">#15eded</color>
 </resources>
