--- a/app/src/main/res/layout/item_dialog_task.xml
+++ b/app/src/main/res/layout/item_dialog_task.xml
@@ -14,7 +14,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/bg_selector">
 
             <ImageView
@@ -24,14 +24,16 @@
                 android:src="@drawable/ic_star"
                 android:scaleType="centerInside"
                 android:layout_alignParentStart="true"
-                android:layout_margin="12dp"/>
+                android:layout_marginTop="12dp"
+                android:layout_marginStart="12dp"/>
 
             <ImageView
                 android:id="@+id/icon_dialog"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/ic_task"
-                android:layout_centerInParent="true"/>
+                android:layout_below="@id/icon_add_priority"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_task" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -39,7 +41,9 @@
                 android:layout_below="@+id/icon_dialog"
                 android:text="@string/what_work_in_week"
                 android:textColor="@color/white"
+                android:textSize="18sp"
                 android:layout_centerHorizontal="true"
+                android:layout_marginBottom="12dp"
                 android:layout_marginTop="4dp"/>
 
         </RelativeLayout>
@@ -57,9 +61,10 @@
                 android:layout_marginEnd="12dp"
                 android:layout_marginTop="12dp"
                 app:boxStrokeColor="@color/purple500"
-                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense">
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/titleTask"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"/>
@@ -74,9 +79,10 @@
                 android:layout_marginEnd="12dp"
                 android:layout_marginStart="12dp"
                 app:boxStrokeColor="@color/purple500"
-                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense">
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/descriptionTask"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"/>
@@ -92,6 +98,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
 
                 <AutoCompleteTextView
+                    android:id="@+id/chooseDay"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/time"
@@ -100,15 +107,39 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.button.MaterialButton
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="12dp"
-                android:text="@string/add"
-                android:layout_marginEnd="24dp"
-                android:layout_marginStart="24dp" />
+                android:orientation="horizontal"
+                android:layout_marginTop="8dp">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/addBtn"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="12dp"
+                    android:text="@string/add"
+                    android:layout_marginEnd="12dp"
+                    android:layout_marginStart="24dp" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/cancelBtn"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="12dp"
+                    android:text="@string/cancel"
+                    android:layout_marginEnd="24dp"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                    app:strokeColor="@color/purple200"
+                    android:layout_marginStart="12dp" />
+
+            </LinearLayout>
 
         </LinearLayout>
     </LinearLayout>
