--- a/app/src/main/res/layout/item_rc_task.xml
+++ b/app/src/main/res/layout/item_rc_task.xml
@@ -5,8 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="12dp"
-    app:cardElevation="12dp"
-    android:layout_margin="4dp">
+    app:cardElevation="4dp"
+    android:layout_margin="8dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -26,22 +26,25 @@
                 android:layout_height="32dp"
                 android:scaleType="centerInside"
                 android:src="@drawable/ic_star"
-                app:tint="@color/gray"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="8dp"/>
 
             <TextView
                 android:id="@+id/prof_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_toEndOf="@id/addPriory"
+                android:gravity="center"
                 android:background="@drawable/bg_circle"
                 android:backgroundTint="@color/purple700"
-                tools:text="سل"
-                android:layout_toEndOf="@id/addPriory"
-                android:textSize="18sp"
-                android:textColor="@color/white"
                 android:padding="8dp"
-                android:layout_margin="8dp"/>
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                tools:text="سل" />
 
             <TextView
                 android:id="@+id/title_tv"
@@ -83,7 +86,6 @@
                 android:scaleType="centerInside"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:background="?itemRippleColor"
                 android:layout_marginEnd="8dp"/>
 
         </RelativeLayout>
