--- a/app/src/main/res/layout/item_rc_week.xml
+++ b/app/src/main/res/layout/item_rc_week.xml
@@ -6,7 +6,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="8dp"
     app:cardCornerRadius="12dp"
-    app:cardElevation="2dp">
+    app:cardElevation="2dp"
+    android:backgroundTint="@color/dark500">
 
     <TextView
         android:layout_width="wrap_content"
@@ -14,7 +15,7 @@
         android:id="@+id/days_tv"
         tools:text="سه شنبه"
         android:layout_margin="4dp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="18sp"/>
 
 </com.google.android.material.card.MaterialCardView>
