--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,12 +2,12 @@
     <!-- Base application theme. -->
     <style name="Theme.MegaTask" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple500</item>
-        <item name="colorPrimaryVariant">@color/purple700</item>
+        <item name="colorPrimary">@color/dark500</item>
+        <item name="colorPrimaryVariant">@color/dark700</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/purple500</item>
-        <item name="colorSecondaryVariant">@color/purple500</item>
+        <item name="colorSecondary">@color/dark500</item>
+        <item name="colorSecondaryVariant">@color/dark500</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
