--- a/app/src/main/res/menu/task_item_menu.xml
+++ b/app/src/main/res/menu/task_item_menu.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/down"
+        android:id="@+id/done"
         android:icon="@drawable/ic_check_mark"
         android:title="@string/done" />
-
-    <item
-        android:id="@+id/downing"
-        android:icon="@drawable/ic_processing_time"
-        android:title="@string/doing" />
 
     <item
         android:id="@+id/edit"
