--- a/app/src/main/res/layout/item_rc_week.xml
+++ b/app/src/main/res/layout/item_rc_week.xml
@@ -7,7 +7,8 @@
     android:layout_margin="8dp"
     app:cardCornerRadius="12dp"
     app:cardElevation="2dp"
-    android:backgroundTint="@color/dark500">
+    android:backgroundTint="@color/dark500"
+    android:id="@+id/cardView">
 
     <TextView
         android:layout_width="wrap_content"
